# UltraMayor

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  dhat-heap.json  license_header.txt
.github/: copilot-instructions.md
.github/workflows/: rust.yml
config/printers/ELEGOO/: Saturn 4 Ultra.toml
config/printers/debug/: debug.toml
config/settings/: default_settings.toml  user_settings.toml
engine/: Cargo.toml
engine/benches/: my_benchmark.rs
engine/src/: action_manager.rs  camera.rs  camera_component.rs  camera_input.rs  collider_component.rs  collision_system.rs  components.rs  dynamic_aabb_tree.rs  epa.rs  gjk.rs  gravity_resource.rs  handles.rs  input.rs  lib.rs  material.rs  material_component.rs  mesh.rs  mesh_resource.rs  model_loader.rs  movement_system.rs  physics_component.rs  physics_resource.rs  physics_system.rs  render.rs  render_data_manager.rs  render_resource_manager.rs  renderer.rs  renderer_backends.rs  shader.rs  shader_resource.rs  texture_resource_manager.rs  time_resource.rs  transform_component.rs  world_basis.rs
engine/src/assets/: handles.rs  material.rs  material_resource.rs  mesh.rs  mesh_resource.rs  mod.rs  model_loader.rs  shader.rs  shader_resource.rs  sound.rs  sound_resource.rs  texture_resource.rs  texture_resource_manager.rs
engine/src/audio/: audio_command_queue_system.rs  audio_control.rs  audio_mixer.rs  audio_queue.rs  audio_system.rs  command_queue.rs  mod.rs  simple_phys_audio_system.rs  spatial_audio_system.rs  voice.rs
engine/src/components/: audio_source_component.rs  mod.rs  physics_event_listener_component.rs  render_body_component.rs  simple_on_hit_audio_component.rs  single_audio_listener_component.rs  sleep_component.rs
engine/src/physics/: collision_event.rs  collision_event_dispatcher.rs  collision_system.rs  dynamic_aabb_tree.rs  epa.rs  gjk.rs  gravity_resource.rs  mod.rs  movement_system.rs  physics_event.rs  physics_event_dispatcher.rs  physics_resource.rs  physics_system.rs
engine/src/render/: frustum.rs  material.rs  material_resource.rs  mesh_resource.rs  render_body.rs  render_body_component.rs  render_body_resource.rs  render_instance.rs  render_queue.rs  render_resource_manager.rs  render_system.rs  renderer.rs  renderer_backends.rs  shader.rs  shader_resource.rs  texture.rs  texture_resource_manager.rs
engine/src/scene/: mod.rs  scene.rs  scene_changer_resource.rs  scene_services.rs
engine/src/utils/: mod.rs  scope_timer.rs
game/: Cargo.toml
game/src/: bowl_controller.rs  camera_controller.rs  game_controller.rs  input_controller.rs  main.rs  player_controller.rs  settings.rs
resources/shaders/: pbr.frag  pbr.vert  slicer_shader.glsl
src/: action.rs  action_manager.rs  basic_physics_system.rs  body.rs  body_builder_system.rs  body_resource_manager.rs  camera.rs  camera_input.rs  camera_resource_manager.rs  cpu_slicer.rs  file_manager.rs  frustum.rs  gpu_slicer.rs  handles.rs  main.rs  material.rs  material_component.rs  material_resource_manager.rs  mesh.rs  mesh_component.rs  mesh_island_analyzer.rs  mesh_renderer.rs  mesh_resource_manager.rs  printer.rs  render_data_manager.rs  render_instance.rs  render_system.rs  render_texture.rs  renderer.rs  settings.rs  shader.rs  stl_processor.rs  texture.rs  texture_resource_manager.rs  transform_component.rs  velocity_component.rs
src/slints/: object_list_item.slint  renderer_top_bar.slint  renderer_visualizations_bar.slint  scene.slint  styles.slint
