[workspace]
members = [
    "engine",
    "game",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
lto = true
debug = false

[profile.profiling]
inherits = "release"
debug = true
split-debuginfo = "off"
lto = false
