[package]
name = "engine"
version = "0.0.1"
edition = "2024"

[dependencies]
# core / utility
log = "0.4.22"
thiserror = "1.0.65"
uuid = { version = "1.10.0", features = ["v4"] }
serde = "1.0.213"
toml = "0.8.19"
dirs-next = "2.0.0"
rand = "0.9.2"
approx = "0.5.1"
bevy_ecs = "0.18.0"
slotmap = "1.1.1"
env_logger = "0.11.9"

# rendering / 3d assets
glow = "0.16.0"
bytemuck = "1.18.0"
image = "0.25.9"
gltf = "1.4.1"
obj-rs = "0.7.4"

# audio
cpal = "0.17.1"
rtrb = "0.3.2"
hound = "3.5.1"

# async / platform glue
async-compat = "0.2.4"
sdl2 = "0.38.0"
tobj = "4.0.3"
glam = "0.31.0"

# parallelism
rayon = "1.11.0"

# heap profiling
dhat = "0.3.3"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
futures = "0.3.28"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3.13.0"
serial_test = "3.1.1"
assert_approx_eq = "1.1.0"
criterion = { version = "0.8", features = ["html_reports"] }


[[bench]]
name = "my_benchmark"
harness = false

[features]
dhat-heap = []    # if you are doing heap profiling