[package]
name = "UltraMayor"
version = "0.0.1"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
rand = "0.9.2"
bevy_ecs = "0.18.0"
sdl2 = "0.38.0"
dhat = "0.3.3"

# UI / UX
rfd = "0.15.0"

# logging hookup (optional, but usually useful at app level)
log = "0.4.22"
dirs-next = "2.0.0"
serde = "1.0.228"
thiserror = "2.0.18"
toml = "0.9.11"
serial_test = "3.3.1"
tempfile = "3.24.0"
glam = "0.31.0"

[[bin]]
name = "UltraMayor"
path = "src/main.rs"

[features]
dhat-heap = []    # if you are doing heap profiling